[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "awake"
version = "4.0.0"
description = "Stay awake!"
readme = "README.md"
authors = [
    { name = "Timothy Holmes", email = "tim.a.holmes@gmail.com" }
]
license = { text = "BSD 3-Clause License" }
dependencies = [
    "keyboard==0.13.5",
    "PyAutoGUI==0.9.53",
    "pynput==1.7.6",
]


[project.urls]
homepage = "https://github.com/timothy-holmes/awake"

[project.scripts]
awake = "awake:main"
